--- a/recipes/meson.build
+++ b/recipes/meson.build
@@ -4,7 +4,8 @@ foreach recipe_file : recipe_files
   executable(fs.stem(recipe_file),
              recipe_file,
              include_directories : btllib_include,
-             dependencies : deps + [ btllib_dep ],
+             dependencies : deps + [ btllib_dep, argparse_dep ],
              install : true,
-             install_dir : 'bin')
+             install_dir : 'bin',
+             override_options : ['cpp_std=c++17'])
 endforeach
