--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ jobs:
 
   - script: |
       source activate btllib_CI
-      conda install --yes -c conda-forge -c bioconda libcxx compilers clang llvm clang-format=14 clang-tools boost samtools coreutils xz lrzip meson ninja cmake
+      conda install --yes -c conda-forge -c bioconda libcxx compilers clang llvm clang-format=14 clang-tools boost samtools coreutils xz lrzip meson ninja cmake openmp
     displayName: Install dependencies
 
   - script: |
@@ -75,7 +75,7 @@ jobs:
 
   - script: |
       source activate btllib_CI
-      conda install --yes -c conda-forge -c bioconda libcxx compilers llvm clang-format=14 clang-tools boost 'samtools>=1.14' coreutils xz lrzip meson ninja cmake
+      conda install --yes -c conda-forge -c bioconda libcxx compilers llvm clang-format=14 clang-tools boost 'samtools>=1.14' coreutils xz lrzip meson ninja cmake openmp
     displayName: 'Install required software'
 
   - script: |
