Fix c++17 standard errors

--- a/recipes/meson.build
+++ b/recipes/meson.build
@@ -1,11 +1,16 @@
 recipe_files = run_command('../scripts/get-files', 'recipes').stdout().strip().split()
 
-foreach recipe_file : recipe_files
-  executable(fs.stem(recipe_file),
-             recipe_file,
-             include_directories : btllib_include,
-             dependencies : deps + [ btllib_dep, argparse_dep ],
-             install : true,
-             install_dir : 'bin',
-             override_options : ['cpp_std=c++17'])
-endforeach
+executable('indexlr',
+            meson.project_source_root() + '/recipes/indexlr.cpp',
+            include_directories : btllib_include,
+            dependencies : deps + [ btllib_dep ],
+            install : true,
+            install_dir : 'bin')
+
+executable('seqgen',
+            meson.project_source_root() + '/recipes/seqgen.cpp',
+            include_directories : btllib_include,
+            dependencies : deps + [ btllib_dep, argparse_dep ],
+            install : true,
+            install_dir : 'bin',
+            override_options : ['cpp_std=c++17'])
