mi_bf added to meson compilation config

--- a/recipes/meson.build
+++ b/recipes/meson.build
@@ -14,3 +14,10 @@ executable('seqgen',
             install : true,
             install_dir : 'bin',
             override_options : ['cpp_std=c++17'])
+
+executable('mi_bf_generate',
+            meson.project_source_root() + '/recipes/mi_bloom_filter.cpp',
+            include_directories : btllib_include,
+            dependencies : deps + [ btllib_dep ],
+            install : true,
+            install_dir : 'bin')
