--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,6 +101,10 @@ jobs:
     displayName: 'Run tests'
 
   - script: |
+      source activate btllib_CI && cd build && ninja code-coverage
+    displayName: 'Run code coverage tests'
+    
+  - script: |
       source activate btllib_CI && cd build && ninja sanitize-undefined
       if [[ $? -ne 0 ]]; then
         cat __build-sanitize-undefined/meson-logs/testlog.txt
