Test samtools version

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -106,6 +106,7 @@ jobs:
   - script: |
       source activate btllib_CI
       set -o errexit -o pipefail
+      samtools --version 2>/dev/stdout | head -n2
       ./compile
       cd build && ninja test-wrappers
     displayName: 'Test wrappers'
