--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,6 +54,8 @@ jobs:
   - script: |
       source activate btllib_CI
       set -o errexit -o pipefail
+      samtools --version 
+      echo "samtools"
       ./compile
       cd build && ninja test-wrappers
     displayName: 'Test wrappers'
