--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ jobs:
 
   - script: |
       source activate btllib_CI
-      conda install --yes -c mamba
+      conda install --yes -c conda-forge mamba
       mamba install --yes -c conda-forge -c bioconda libcxx compilers clang llvm clang-format=14 clang-tools boost samtools coreutils xz lrzip meson ninja cmake openmp
     displayName: Install dependencies
   
@@ -76,7 +76,7 @@ jobs:
 
   - script: |
       source activate btllib_CI      
-      conda install --yes -c mamba
+      conda install --yes -c conda-forge mamba
       mamba install --yes -c conda-forge -c bioconda libcxx compilers llvm clang-format=14 clang-tools boost 'samtools>=1.14' coreutils xz lrzip meson ninja cmake openmp
     displayName: 'Install required software'
 
