--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ jobs:
       set -o errexit -o pipefail
       ./compile
       cd examples
-      g++ nthash_spacedseeds.cpp -I../install/include -L../install/lib -lbtllib && ./a
+      g++ nthash_spacedseeds.cpp -I../install/include -L../install/lib -lbtllib && ./a.out
     displayName: 'Compile example'
 
   - script: |
