--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,8 +101,8 @@ jobs:
   - script: |
       source activate btllib_CI
       set -o errexit -o pipefail
-      export CC=clang
-      export CXX=clang++
+      export CC=clang-16
+      export CXX=clang++-16
       ./compile
       cd examples
       clang++ nthash_spacedseeds.cpp -std=c++17 -I../install/include -L../install/lib -lbtllib && ./a.out
