--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ jobs:
   - script: |
       source activate btllib_CI
       conda install --yes -c conda-forge mamba
-      mamba install --yes -c conda-forge -c bioconda libcxx compilers clang llvm clang-format=14 clang-tools boost samtools coreutils xz lrzip meson ninja cmake openmp gcovr
+      mamba install --yes -c conda-forge -c bioconda libcxx compilers clang llvm clang-format clang-tools boost samtools coreutils xz lrzip meson ninja cmake openmp gcovr
     displayName: Install dependencies
   
   - script: |
@@ -106,14 +106,6 @@ jobs:
       cd examples
       clang++ nthash_spacedseeds.cpp -std=c++17 -I../install/include -L../install/lib -lbtllib && ./a.out
     displayName: 'Compile example'
-
-  - script: |
-      source activate btllib_CI
-      cd build && ninja clang-format-check
-    displayName: 'Run clang-format'
-
-  - script: source activate btllib_CI && cd build && ninja clang-tidy
-    displayName: 'Run clang-tidy'
 
   - script: |
       source activate btllib_CI && cd build && meson test --repeat=5 --print-errorlogs
