--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,8 @@ jobs:
 
   - script: |
       source activate btllib_CI
+      export CXX="$(realpath $(which g++))"
+      echo $CXX
       cd build && ninja clang-tidy
     displayName: 'Run clang-tidy'
 
