--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ jobs:
 
 - job: linux
   pool:
-    vmImage: 'ubuntu-22.04'
+    vmImage: 'ubuntu-latest'
 
   steps:
   - checkout: self
@@ -20,7 +20,7 @@ jobs:
   - script: |
       source activate btllib_CI
       conda install --yes -c conda-forge mamba
-      mamba install --yes -c conda-forge -c bioconda libcxx compilers clang llvm clang-format=14 clang-tools boost samtools coreutils xz lrzip meson ninja cmake openmp gcovr
+      mamba install --yes -c conda-forge -c bioconda libcxx compilers clang llvm clang-format=18 clang-tools boost samtools coreutils xz lrzip meson ninja cmake openmp gcovr
     displayName: Install dependencies
   
   - script: |
@@ -53,11 +53,6 @@ jobs:
 
   - script: |
       source activate btllib_CI
-      cd build && ninja code-coverage
-    displayName: 'Run code coverage tests'
-
-  - script: |
-      source activate btllib_CI
       cd build && ninja sanitize-undefined
       if [[ $? -ne 0 ]]; then
         cat __build-sanitize-undefined/meson-logs/testlog.txt
@@ -72,9 +67,16 @@ jobs:
       cd build && ninja test-wrappers
     displayName: 'Test wrappers'
 
+  - script: |
+      source activate btllib_CI
+      mamba install --yes -c conda-forge meson=1.4.0
+      rm -r build && meson setup build && cd build && ninja
+      ninja test && ninja code-coverage
+    displayName: 'Run code coverage tests'
+
 - job: macos
   pool:
-    vmImage: 'macOS-12'
+    vmImage: 'macOS-latest'
 
   steps:
   - checkout: self
@@ -90,11 +92,12 @@ jobs:
   - script: |
       source activate btllib_CI      
       conda install --yes -c conda-forge mamba
-      mamba install --yes -c conda-forge -c bioconda libcxx compilers llvm clang-format=14 clang-tools boost 'samtools>=1.14' coreutils xz lrzip meson=1.2.3 ninja cmake openmp gcovr
+      mamba install --yes -c conda-forge -c bioconda libcxx compilers llvm clang-format clang-tools boost 'samtools>=1.14' coreutils xz lrzip meson ninja cmake openmp gcovr
     displayName: 'Install required software'
 
   - script: |
       source activate btllib_CI
+      export CXXFLAGS="$CXXFLAGS -Wno-error=unused-but-set-variable"
       meson setup build && cd build && ninja
     displayName: 'Build the project'
   
@@ -103,27 +106,17 @@ jobs:
       set -o errexit -o pipefail
       ./compile
       cd examples
-      g++ nthash_spacedseeds.cpp -std=c++17 -I../install/include -L../install/lib -lbtllib && ./a.out
+      clang++ nthash_spacedseeds.cpp -std=c++17 -I../install/include -L../install/lib -lbtllib && ./a.out
     displayName: 'Compile example'
-
-  - script: |
-      source activate btllib_CI
-      cd build && ninja clang-format-check
-    displayName: 'Run clang-format'
-
-  - script: source activate btllib_CI && cd build && ninja clang-tidy
-    displayName: 'Run clang-tidy'
 
   - script: |
       source activate btllib_CI && cd build && meson test --repeat=5 --print-errorlogs
     displayName: 'Run tests'
-
-  - script: |
-      source activate btllib_CI && cd build && ninja code-coverage
-    displayName: 'Run code coverage tests'
     
   - script: |
-      source activate btllib_CI && cd build && ninja sanitize-undefined
+      source activate btllib_CI && cd build
+      export CXXFLAGS="$CXXFLAGS -Wno-error=unused-but-set-variable"
+      ninja sanitize-undefined
       if [[ $? -ne 0 ]]; then
         cat __build-sanitize-undefined/meson-logs/testlog.txt
         exit 1
